--- a/Share Beauty App/Views/LX/IngredientSkinGraphContentView.xib
+++ b/Share Beauty App/Views/LX/IngredientSkinGraphContentView.xib
@@ -72,8 +72,8 @@ Sirtuin1</string>
                         <userDefinedRuntimeAttribute type="boolean" keyPath="adjustsFontSizeToFitWidth" value="YES"/>
                     </userDefinedRuntimeAttributes>
                 </label>
-                <label opaque="NO" userInteractionEnabled="NO" tag="16" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sae-KU-Mye">
-                    <rect key="frame" x="548" y="439" width="52" height="24"/>
+                <label opaque="NO" userInteractionEnabled="NO" tag="16" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sae-KU-Mye">
+                    <rect key="frame" x="548" y="439" width="54" height="37"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <string key="text">Amount of longevity gene
 Sirtuin1</string>
