--- a/Share Beauty App/Base.lproj/LuxuryIngredientViewController.storyboard
+++ b/Share Beauty App/Base.lproj/LuxuryIngredientViewController.storyboard
@@ -56,8 +56,8 @@ Sakura Leaf</string>
                                                     <action selector="showCherryGraphView:" destination="T4m-bh-eTl" eventType="touchUpInside" id="LOY-Vf-mHr"/>
                                                 </connections>
                                             </button>
-                                            <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SkingenecellEnmei" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNk-1m-0v1">
-                                                <rect key="frame" x="117" y="306" width="180" height="26"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" tag="10" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SkingenecellEnmei" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fNk-1m-0v1">
+                                                <rect key="frame" x="117" y="304" width="180" height="47"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <fontDescription key="fontDescription" name="ACaslonPro-Regular" family="Adobe Caslon Pro" pointSize="19"/>
                                                 <color key="textColor" red="0.60784313729999995" green="0.53725490200000003" blue="0.2784313725" alpha="1" colorSpace="calibratedRGB"/>
