--- a/Share Beauty App/Base.lproj/MakeupViewController.storyboard
+++ b/Share Beauty App/Base.lproj/MakeupViewController.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="ipad9_7" orientation="landscape">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -162,6 +162,7 @@
                     <connections>
                         <outlet property="mBtnDropDown" destination="U9s-ag-WIT" id="ytk-N3-FdC"/>
                         <outlet property="mCollectionView" destination="3HT-ep-D08" id="Nv9-ye-B2A"/>
+                        <outlet property="mLblLineName" destination="nDq-xP-e7Q" id="tvn-8z-X6k"/>
                         <outlet property="mScrollVPinch" destination="74k-RY-O5j" id="SO7-EQ-Akf"/>
                         <outlet property="mVMain" destination="iNn-wk-4mK" id="QrO-V9-CI8"/>
                     </connections>
